force-app/main/default/objects/Account/fields/crm_new_account__c.field-meta.xml
<CustomField>
    <fullName>crm_new_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For accounts that are replaced by new accounts from customer master. This field points to the new account record</description>
    <label>New Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Old Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>