force-app/main/default/objects/Account/fields/crm_newsletter__c.field-meta.xml
<CustomField>
    <fullName>crm_newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Newsletter – Post</label>
    <type>Checkbox</type>
</CustomField>