force-app/main/default/objects/Account/fields/crm_On_Behalf_of__c.field-meta.xml
<CustomField>
    <fullName>crm_On_Behalf_of__c</fullName>
    <label>On behalf of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>