force-app/main/default/objects/Account/fields/crm_Organization_number__c.field-meta.xml
<CustomField>
    <fullName>crm_Organization_number__c</fullName>
    <label>Orgnumber Not In Use</label>
    <length>20</length>
    <type>Text</type>
</CustomField>