force-app/main/default/objects/Account/fields/crm_orgnumber_has_characters__c.field-meta.xml
<CustomField>
    <fullName>crm_orgnumber_has_characters__c</fullName>
    <formula>NOT(ISNUMBER( Orga__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>crm orgnumber has characters</label>
    <type>Checkbox</type>
</CustomField>