force-app/main/default/objects/Account/fields/crm_Out_Of_Busines_Info_Company_Name_for__c.field-meta.xml
<CustomField>
    <fullName>crm_Out_Of_Busines_Info_Company_Name_for__c</fullName>
    <label>Out Of Business Info-Comp Name for Reltn</label>
    <length>50</length>
    <type>Text</type>
</CustomField>