force-app/main/default/objects/Account/fields/crm_Out_Of_Busines_Info_DUNSno_for_reltn__c.field-meta.xml
<CustomField>
    <fullName>crm_Out_Of_Busines_Info_DUNSno_for_reltn__c</fullName>
    <label>Out Of Business Info - DUNSno for reltn</label>
    <length>50</length>
    <type>Text</type>
</CustomField>