force-app/main/default/objects/Account/fields/crm_Out_Of_Business_Info_change_desc__c.field-meta.xml
<CustomField>
    <fullName>crm_Out_Of_Business_Info_change_desc__c</fullName>
    <label>Out Of Business Info - change desc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>