force-app/main/default/objects/Account/fields/crm_Out_Of_Business_Info_indicator_flag__c.field-meta.xml
<CustomField>
    <fullName>crm_Out_Of_Business_Info_indicator_flag__c</fullName>
    <label>Out Of Business Info - indicator/flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>