force-app/main/default/objects/Account/fields/crm_Out_Of_Business_Info_type_of_change__c.field-meta.xml
<CustomField>
    <fullName>crm_Out_Of_Business_Info_type_of_change__c</fullName>
    <label>Out Of Business Info - type of change</label>
    <length>50</length>
    <type>Text</type>
</CustomField>