force-app/main/default/objects/Account/fields/crm_Party_level_Account__c.field-meta.xml
<CustomField>
    <fullName>crm_Party_level_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Points to the parent account</description>
    <label>Party Level Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relation level customers</relationshipLabel>
    <relationshipName>Relation_level_accounts</relationshipName>
    <type>Lookup</type>
</CustomField>