force-app/main/default/objects/Account/fields/crm_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>crm_Payment_Term__c</fullName>
    <label>Payment Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>