force-app/main/default/objects/Account/fields/crm_Posten_Source_Comp_for_datarecord_ER__c.field-meta.xml
<CustomField>
    <fullName>crm_Posten_Source_Comp_for_datarecord_ER__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <inlineHelpText>ERP/Finance Posten Bring Company Description</inlineHelpText>
    <label>Posten Source Company for datarecord</label>
    <length>50</length>
    <type>Text</type>
</CustomField>