force-app/main/default/objects/Account/fields/crm_Posten_Source_Company__c.field-meta.xml
<CustomField>
    <fullName>crm_Posten_Source_Company__c</fullName>
    <label>Posten Source Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>