force-app/main/default/objects/Account/fields/crm_Primary_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>crm_Primary_Customer_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(Manual) initial Import from Caesar to &quot;set&quot; datause for creation of Party Level Account in SF</description>
    <label>Primary Customer</label>
    <type>Checkbox</type>
</CustomField>