force-app/main/default/objects/Account/fields/crm_Primary_customer_number__c.field-meta.xml
<CustomField>
    <fullName>crm_Primary_customer_number__c</fullName>
    <label>Primary customer number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>