force-app/main/default/objects/Account/fields/crm_Primary_LOB_Code_NACE__c.field-meta.xml
<CustomField>
    <fullName>crm_Primary_LOB_Code_NACE__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>Primary LOB Code, NACE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>