force-app/main/default/objects/Account/fields/crm_Reason_for_Customer_Blocking__c.field-meta.xml
<CustomField>
    <fullName>crm_Reason_for_Customer_Blocking__c</fullName>
    <label>Reason for Customer Blocking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>