force-app/main/default/objects/Account/fields/crm_REGISTRYUPDATEDATE__c.field-meta.xml
<CustomField>
    <fullName>crm_REGISTRYUPDATEDATE__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>REGISTRYUPDATEDATE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>