force-app/main/default/objects/Account/fields/crm_Requested_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>crm_Requested_Credit_Amount__c</fullName>
    <label>Requested Credit Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>