force-app/main/default/objects/Account/fields/crm_Revenue_all_time__c.field-meta.xml
<CustomField>
    <fullName>crm_Revenue_all_time__c</fullName>
    <label>Revenue (all time)</label>
    <summarizedField>crm_Revenue_Line__c.crm_Amount__c</summarizedField>
    <summaryForeignKey>crm_Revenue_Line__c.crm_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>