force-app/main/default/objects/Account/fields/crm_Revenue_This_Year__c.field-meta.xml
<CustomField>
    <fullName>crm_Revenue_This_Year__c</fullName>
    <label>Revenue This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>