force-app/main/default/objects/Account/fields/crm_Sales_External_Segment__c.field-meta.xml
<CustomField>
    <fullName>crm_Sales_External_Segment__c</fullName>
    <label>Sales External Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>X-small</fullName>
            </value>
            <value>
                <fullName>X-large</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>