force-app/main/default/objects/Account/fields/crm_Sales_External_Segment_formula__c.field-meta.xml
<CustomField>
    <fullName>crm_Sales_External_Segment_formula__c</fullName>
    <formula>if(Parent.RecordType.DeveloperName = &apos;crm_Party_level_Customer&apos; , text (Parent.crm_Sales_External_Segment__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales External Segments Relation Level</label>
    <type>Text</type>
</CustomField>