force-app/main/default/objects/Account/fields/crm_segment_Active_PaDoren_Customer_c__c.field-meta.xml
<CustomField>
    <fullName>crm_segment_Active_PaDoren_Customer_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Segment PåDøren</label>
    <type>Checkbox</type>
</CustomField>