force-app/main/default/objects/Account/fields/crm_segment_Active_PakkerB2C_Customer__c.field-meta.xml
<CustomField>
    <fullName>crm_segment_Active_PakkerB2C_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Segment PakkerB2C</label>
    <type>Checkbox</type>
</CustomField>