force-app/main/default/objects/Account/fields/crm_segment_Active_ParcelsB2B_Customer__c.field-meta.xml
<CustomField>
    <fullName>crm_segment_Active_ParcelsB2B_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Segment ParcelsB2B</label>
    <type>Checkbox</type>
</CustomField>