force-app/main/default/objects/Account/fields/Crm_segment_Active_Post_Customer__c.field-meta.xml
<CustomField>
    <fullName>Crm_segment_Active_Post_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Segment Active Post</label>
    <type>Checkbox</type>
</CustomField>