force-app/main/default/objects/Account/fields/crm_segment_Logistics_Revenue_12__c.field-meta.xml
<CustomField>
    <fullName>crm_segment_Logistics_Revenue_12__c</fullName>
    <label>Logistics Revenue Last 12 months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>