force-app/main/default/objects/Account/fields/crm_segment_Region__c.field-meta.xml
<CustomField>
    <fullName>crm_segment_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Midt Nord</fullName>
            </value>
            <value>
                <fullName>Sørvest</fullName>
            </value>
            <value>
                <fullName>OAØ</fullName>
            </value>
            <value>
                <fullName>Øst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>