force-app/main/default/objects/Account/fields/crm_Sent_to_CDH__c.field-meta.xml
<CustomField>
    <fullName>crm_Sent_to_CDH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to true when a Prospect is requested for customer conversion in CDH.</description>
    <label>Sent to CDH</label>
    <type>Checkbox</type>
</CustomField>