force-app/main/default/objects/Account/fields/crm_share_wallet__c.field-meta.xml
<CustomField>
    <fullName>crm_share_wallet__c</fullName>
    <label>Share of Wallet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>