force-app/main/default/objects/Account/fields/crm_Shipping_State_Province__c.field-meta.xml
<CustomField>
    <fullName>crm_Shipping_State_Province__c</fullName>
    <label>Shipping State/Province</label>
    <length>150</length>
    <type>Text</type>
</CustomField>