force-app/main/default/objects/Account/fields/crm_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>crm_Shipping_Street__c</fullName>
    <label>Shipping Street</label>
    <type>TextArea</type>
</CustomField>