force-app/main/default/objects/Account/fields/crm_should_not_receive_price_letter__c.field-meta.xml
<CustomField>
    <fullName>crm_should_not_receive_price_letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Should not receive price letter - Post</label>
    <type>Checkbox</type>
</CustomField>