force-app/main/default/objects/Account/fields/crm_should_receive_postcode_changed__c.field-meta.xml
<CustomField>
    <fullName>crm_should_receive_postcode_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Should receive postcode changed</label>
    <type>Checkbox</type>
</CustomField>