force-app/main/default/objects/Account/fields/crm_Skip_Validation__c.field-meta.xml
<CustomField>
    <fullName>crm_Skip_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Validation</label>
    <type>Checkbox</type>
</CustomField>