force-app/main/default/objects/Account/fields/crm_TA_supplier__c.field-meta.xml
<CustomField>
    <fullName>crm_TA_supplier__c</fullName>
    <label>TA supplier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consignor</fullName>
            </value>
            <value>
                <fullName>Edi- Soft Ticket</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Smartsend</fullName>
            </value>
            <value>
                <fullName>Unifaun</fullName>
            </value>
            <value>
                <fullName>Webshipr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>