force-app/main/default/objects/Account/fields/crm_TA_supplier_for_labels_and_EDI__c.field-meta.xml
<CustomField>
    <fullName>crm_TA_supplier_for_labels_and_EDI__c</fullName>
    <label>TA supplier for labels and EDI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unifaun</fullName>
            </value>
            <value>
                <fullName>Centiro</fullName>
            </value>
            <value>
                <fullName>Logtrade</fullName>
            </value>
            <value>
                <fullName>Consignor</fullName>
            </value>
            <value>
                <fullName>Memnon</fullName>
            </value>
            <value>
                <fullName>EdiCom</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>