force-app/main/default/objects/Account/fields/crm_Transition_Period_In_Months__c.field-meta.xml
<CustomField>
    <fullName>crm_Transition_Period_In_Months__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Transition Period(In Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>