force-app/main/default/objects/Account/fields/crm_Transition_Support__c.field-meta.xml
<CustomField>
    <fullName>crm_Transition_Support__c</fullName>
    <label>Transition Support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bring/Posten</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Border using KGH</fullName>
            </value>
            <value>
                <fullName>Other Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>