force-app/main/default/objects/Account/fields/crm_Updated_by_CDH__c.field-meta.xml
<CustomField>
    <fullName>crm_Updated_by_CDH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated by CDH</label>
    <type>Checkbox</type>
</CustomField>