force-app/main/default/objects/Account/fields/crm_UpsertKey__c.field-meta.xml
<CustomField>
    <fullName>crm_UpsertKey__c</fullName>
    <description>This field is used by eConnect to make an Upsert call on Party level accounts. It gets populated by a workflow in the format - OrgNo + &apos;Party&apos;</description>
    <externalId>true</externalId>
    <label>UpsertKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>