force-app/main/default/objects/Account/fields/crm_Visit_Address_City__c.field-meta.xml
<CustomField>
    <fullName>crm_Visit_Address_City__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>Visit Address City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>