force-app/main/default/objects/Account/fields/crm_Visit_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>crm_Visit_Address_Street__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>Visit Address Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>