force-app/main/default/objects/Account/fields/crm_Visit_Address_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>crm_Visit_Address_Zipcode__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>Visit Address Zipcode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>