force-app/main/default/objects/Account/fields/crm_Web_shop_supplier__c.field-meta.xml
<CustomField>
    <fullName>crm_Web_shop_supplier__c</fullName>
    <label>Web-shop supplier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chainbox</fullName>
            </value>
            <value>
                <fullName>Dandomain</fullName>
            </value>
            <value>
                <fullName>Magento</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prestashop</fullName>
            </value>
            <value>
                <fullName>ScanCommerce</fullName>
            </value>
            <value>
                <fullName>Scannet</fullName>
            </value>
            <value>
                <fullName>Smartweb</fullName>
            </value>
            <value>
                <fullName>Wannafind</fullName>
            </value>
            <value>
                <fullName>Woocommerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>