force-app/main/default/objects/Account/fields/CRMStatus__c.field-meta.xml
<CustomField>
    <fullName>CRMStatus__c</fullName>
    <description>Holds the account segment for KSL.</description>
    <label>KS-status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Storkunde</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>