force-app/main/default/objects/Account/fields/cs_Credit_Limit_formula__c.field-meta.xml
<CustomField>
    <fullName>cs_Credit_Limit_formula__c</fullName>
    <formula>Parent.crm_Credit_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit Relation Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>