force-app/main/default/objects/Account/fields/cs_Customer_Role_formula__c.field-meta.xml
<CustomField>
    <fullName>cs_Customer_Role_formula__c</fullName>
    <formula>IF( ISPICKVAL(Type, &apos;Customer&apos;), &apos;Customer&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Role</label>
    <type>Text</type>
</CustomField>