force-app/main/default/objects/Account/fields/Customer_Conversion_Group_F__c.field-meta.xml
<CustomField>
    <fullName>Customer_Conversion_Group_F__c</fullName>
    <formula>Text(Parent.crm_Conv_Customer_Conversion_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Conversion Group- F</label>
    <type>Text</type>
</CustomField>