force-app/main/default/objects/Account/fields/Customer_Converted__c.field-meta.xml
<CustomField>
    <fullName>Customer_Converted__c</fullName>
    <label>Customer Converted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotConverted</fullName>
            </value>
            <value>
                <fullName>InPreparation</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>