force-app/main/default/objects/Account/fields/Customer_Converted_formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Converted_formula__c</fullName>
    <formula>TEXT(Parent.Customer_Converted__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted</label>
    <type>Text</type>
</CustomField>