force-app/main/default/objects/Account/fields/Customer_Price_Ready__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Price Ready</label>
    <type>Checkbox</type>
</CustomField>