force-app/main/default/objects/Account/fields/Customer_Price_Ready_formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price_Ready_formula__c</fullName>
    <formula>Parent.Customer_Price_Ready__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Price Ready-F</label>
    <type>Checkbox</type>
</CustomField>