force-app/main/default/objects/Account/fields/customer_segment__c.field-meta.xml
<CustomField>
    <fullName>customer_segment__c</fullName>
    <description>CSPhase2 Dinesh Label Change 26/12/2016</description>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>