force-app/main/default/objects/Account/fields/Customer_state_F__c.field-meta.xml
<CustomField>
    <fullName>Customer_state_F__c</fullName>
    <formula>Text(Parent.crm_conv_Customer_state__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer state-F</label>
    <type>Text</type>
</CustomField>