force-app/main/default/objects/Account/fields/CustomerTeam__c.field-meta.xml
<CustomField>
    <fullName>CustomerTeam__c</fullName>
    <description>CSPhase2 Dinesh Label Change 26/12/2016</description>
    <label>Customer team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>