force-app/main/default/objects/Account/fields/demotest__c.field-meta.xml
<CustomField>
    <fullName>demotest__c</fullName>
    <label>demotest</label>
    <length>100</length>
    <type>Text</type>
</CustomField>