force-app/main/default/objects/Account/fields/DisconnectRelationAccount__c.field-meta.xml
<CustomField>
    <fullName>DisconnectRelationAccount__c</fullName>
    <formula>IF(( Orga__c == Parent.Orga__c ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DisconnectRelationAccount</label>
    <type>Checkbox</type>
</CustomField>