force-app/main/default/objects/Account/fields/Do_not_want_custom_clearance__c.field-meta.xml
<CustomField>
    <fullName>Do_not_want_custom_clearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not want custom clearance</label>
    <type>Checkbox</type>
</CustomField>