force-app/main/default/objects/Account/fields/DUNS_number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_number__c</fullName>
    <description>DUNS number of a business. A business customer have a party number, but might belong to a company identified by a DUNS number.</description>
    <label>DUNS nummer</label>
    <length>18</length>
    <type>Text</type>
</CustomField>