force-app/main/default/objects/Account/fields/e_Commerce__c.field-meta.xml
<CustomField>
    <fullName>e_Commerce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer that has an online store</description>
    <inlineHelpText>Customer that has an online store</inlineHelpText>
    <label>Online Store</label>
    <type>Checkbox</type>
</CustomField>